--- a/CSCacheTest/CSCacheTest.csproj
+++ b/CSCacheTest/CSCacheTest.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConfigTest.cs" />
     <Compile Include="FilesTest.cs" />
+    <Compile Include="MD5Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CSCache\CSCache.csproj">
