Added unit tests for CSCacheLib.

--- a/CSCacheTest/CSCacheTest.csproj
+++ b/CSCacheTest/CSCacheTest.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ConfigTest.cs" />
     <Compile Include="FilesTest.cs" />
     <Compile Include="MD5Test.cs" />
+    <Compile Include="CSCacheTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CSCache\CSCache.csproj">
